--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,29 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <meta name="author" content="Longcong Cultural Team" />
+    <meta property="og:site_name" content="Longcong Cultural Team · Chinese Culture Website" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://nyyjshcz.github.io/chinese-culture-website/" />
+    <meta property="og:title" content="Chinese Culture Website" />
+    <meta property="og:description" content="A team project by Longcong Cultural Team. Contributor: nyyjshcz." />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Chinese Culture Website",
+        "url": "https://nyyjshcz.github.io/chinese-culture-website/",
+        "creator": {
+          "@type": "Organization",
+          "name": "Longcong Cultural Team"
+        },
+        "contributor": {
+          "@type": "Person",
+          "name": "nyyjshcz"
+        }
+      }
+    </script>
+    <title>Chinese Culture Website</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
