--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/chinese-culture-website/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/chinese-culture-website/logo192.png"/><link rel="manifest" href="/chinese-culture-website/manifest.json"/><meta name="author" content="nyyjshcz"/><meta property="og:site_name" content="Chinese Culture Website"/><meta property="og:type" content="website"/><meta property="og:url" content="https://nyyjshcz.github.io/chinese-culture-website/"/><meta property="og:title" content="Chinese Culture Website"/><meta property="og:description" content="A personal project about Chinese culture, designed and developed by nyyjshcz."/><script type="application/ld+json">{
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/chinese-culture-website/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/chinese-culture-website/logo192.png"/><link rel="manifest" href="/chinese-culture-website/manifest.json"/><meta name="author" content="Longcong Cultural Team"/><meta property="og:site_name" content="Longcong Cultural Team · Chinese Culture Website"/><meta property="og:type" content="website"/><meta property="og:url" content="https://nyyjshcz.github.io/chinese-culture-website/"/><meta property="og:title" content="Chinese Culture Website"/><meta property="og:description" content="A team project by Longcong Cultural Team. Contributor: nyyjshcz."/><script type="application/ld+json">{
         "@context": "https://schema.org",
         "@type": "WebSite",
         "name": "Chinese Culture Website",
         "url": "https://nyyjshcz.github.io/chinese-culture-website/",
         "creator": {
+          "@type": "Organization",
+          "name": "Longcong Cultural Team"
+        },
+        "contributor": {
           "@type": "Person",
           "name": "nyyjshcz"
         }
-      }</script><title>Chinese Culture Website</title><script defer="defer" src="/chinese-culture-website/static/js/main.54c0b6f1.js"></script><link href="/chinese-culture-website/static/css/main.c19e2a98.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+      }</script><title>Chinese Culture Website</title><script defer="defer" src="/chinese-culture-website/static/js/main.aab8954d.js"></script><link href="/chinese-culture-website/static/css/main.c19e2a98.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
